--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,10 @@
 doctype html
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title= title
+		link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
+		link(rel="stylesheet", href="/stylesheets/style.css")
+		script(type="text/javascript", src="/bower_components/jquery/dist/jquery.min.js")
+		script(type="text/javascript", src="/javascripts/movie.js")
+	body
+		block content
