--- a/views/index.jade
+++ b/views/index.jade
@@ -2,3 +2,21 @@ extends layout
 block content
 	h1= title
 	p Welcome to #{title}
+	form
+		div.form-group
+			label(for="name") Name
+			input.form-control(type="text" id="name" placeholder="name")
+		div.form-group
+			label(for="telnumber") Telephone
+			input.form-control(type="number" id="telnumber" placeholder="telephone")
+		div.form-group
+			label(for="exampleInputEmail") Email address
+			input.form-control(type="email" id="exampleInputEmail" placeholder="Email")
+		div.form-group
+			label(for="exampleInputPassword") Password
+			input.form-control(type="password" id="exampleInputPassword" placeholder="Password")
+		div.checkbox
+			label
+				input(type="checkbox") 
+				span set default
+		button.btn.btn-default(type="submit") Submit
