--- a/views/index.jade
+++ b/views/index.jade
@@ -19,4 +19,4 @@ block content
 			label
 				input(type="checkbox") 
 				span set default
-		button.btn.btn-default(type="submit") Submit
+		button.btn.btn-default(type="button" id="save-user") Submit
