--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
 		link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/stylesheets/style.css")
 		script(type="text/javascript", src="/bower_components/jquery/dist/jquery.min.js")
+		script(type="text/javascript", src="javascripts/main.js")
 	body
 		block content
