--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 block content
 	h1= title
 	p Welcome to #{title}
+	a(href="/data") 查看数据列表
 	form
 		div.form-group
 			label(for="name") Name
