完成更新数据的功能

--- a/views/data-detail.jade
+++ b/views/data-detail.jade
@@ -7,3 +7,7 @@ block content
 				p=item.name
 				p=item.telephone
 				p=item.email
+				p
+					a.btn.btn-default(href="/data/editdata/"+item._id id="editdata") 修改
+				p
+					a.btn.btn-default(id="removedata") 删除
