--- a/views/data-detail.jade
+++ b/views/data-detail.jade
@@ -4,7 +4,7 @@ block content
 	ul
 		each item in data
 			li
-				p=item.name
+				p(id="detail-name" data-id="#{item._id}") #{item.name}
 				p=item.telephone
 				p=item.email
 				p
