--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
 	head
 		title= title
-		link(rel="shortcut icon" type="/images/favicon.ico" href="images/favicon.ico")
+		link(rel="shortcut icon" type="/images/favicon.ico" href="/images/favicon.ico")
 		link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/stylesheets/style.css")
 		script(type="text/javascript", src="/bower_components/jquery/dist/jquery.min.js")
