增加注册和登录

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,9 @@ extends layout
 block content
 	h1= title
 	p Welcome to #{title}
+	div.row
+		a.col-xs-1.col-md-offset-10.text-right(href="/login") 登录
+		a.col-xs-1.text-right(href="/register") 注册
 	p
 		a(href="/data") 查看数据列表
 	form
