--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
 		script(type="text/javascript", src="/bower_components/jquery/dist/jquery.min.js")
 		script(type="text/javascript", src="/javascripts/main.js")
 	body
-		block content
+		div.container
+			block content
